--- a/app/src/main/res/drawable/bullish_candlesticks.xml
+++ b/app/src/main/res/drawable/bullish_candlesticks.xml
@@ -1,21 +1,30 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="1024dp"
-    android:height="1024dp"
-    android:viewportWidth="1024"
-    android:viewportHeight="1024">
+    android:width="112.51dp"
+    android:height="174.65dp"
+    android:viewportWidth="112.51"
+    android:viewportHeight="174.65">
   <path
-      android:pathData="M0,0h1024v1024H0z"
-      android:fillColor="#FEFDFC"/>
+      android:pathData="M65.7,30.96h46.8v115.49h-46.8z"
+      android:strokeWidth="0.264583"
+      android:fillColor="#008000"/>
   <path
-      android:pathData="M620.9,125.1q1.9,-0.2 3.9,-0.3c3,0 5.9,1 8,3.2a11.4,11.4 0,0 1,3 6.2c0.6,4.7 0.3,9.8 0.3,14.6v24.8l-0,84.3 58.5,-0c8.9,-0 19,-1 27.8,0.2a11,11 0,0 1,6.3 2.8c2.3,2.1 3.2,4.9 3.4,8 0.4,8.2 0.1,16.7 0.1,24.9v46.4L732,480.9v179.7l0.1,57.1c0,10.1 0.3,20.4 -0,30.5 -0.1,3.2 -0.5,8.2 -2.8,10.5a11.4,11.4 0,0 1,-5.8 3.1c-7.3,1.3 -19.9,0.3 -28,0.3h-59.4v80.8c0,12.9 0.9,27.9 -0.1,40.5 -0.2,2.3 -0.5,4.4 -1.8,6.3 -1.9,2.8 -4.6,3.9 -7.8,4.6 -3.7,-0.1 -7.2,-0.4 -10,-3.1 -1.9,-1.9 -2.5,-4 -2.8,-6.6 -0.6,-5 -0.3,-10.3 -0.3,-15.3v-24.6l0.1,-82.6 -61.6,-0.1c-8.6,0 -18.7,1.1 -27.2,-0.2a10.4,10.4 0,0 1,-5.3 -2.7c-2.7,-2.3 -3.1,-7.3 -3.3,-10.7 -0.4,-8.5 -0.1,-17.2 -0.1,-25.8l0,-50.7 0,-151.7 -0,-166.1v-54.2c0,-9.9 -0.3,-20 0.1,-29.9 0.1,-3.2 0.6,-6.5 3,-8.9a10.8,10.8 0,0 1,6 -3c8.5,-1.3 19.3,-0.3 28,-0.3l60.2,0c-0.3,-29 -0.1,-58 -0,-87 0,-8.3 -1.2,-32.4 0.6,-38.9 1,-3.5 3.9,-5.5 7,-7"
-      android:fillColor="#1A1A1A"/>
+      android:pathData="M86.92,0h4.92v31.78h-4.92z"
+      android:strokeWidth="0.264583"
+      android:fillColor="#008000"/>
   <path
-      android:pathData="m539,280.4 l170,-0 0,459.1 -170,-0z"
-      android:fillColor="#40C384"/>
+      android:pathData="M86.92,142.88h4.92v31.78h-4.92z"
+      android:strokeWidth="0.264583"
+      android:fillColor="#008000"/>
   <path
-      android:pathData="m381.5,316.1 l0.7,-0.1c3.7,-0.3 7.7,0.1 10.6,2.8 1.7,1.6 2.5,3.6 2.9,5.9 1.2,6.9 0.4,14.8 0.4,21.8l-0,42.2 41.5,-0.1c6.8,-0 14.2,-0.6 21,0.2 2.3,0.2 5.9,0.9 7.7,2.5 2.6,2.4 3.2,8.4 3.4,11.8 0.8,17.9 0,36.3 0,54.2v176.1c0,12.9 0.9,26.3 -0.2,39.1 -0.3,3.2 -1.1,5.9 -3.3,8.2 -1.7,1.8 -3.5,2.3 -5.9,2.7 -7.2,1.2 -15.3,0.5 -22.5,0.4l-41.6,-0.1c-0,11.4 1.2,77.6 -1.1,82.9 -1.5,3.5 -4.8,4.8 -8.2,6 -3.8,0.2 -7.2,-0.3 -10.1,-3a10,10 0,0 1,-2.9 -5.6c-1.4,-8.1 -0.4,-17.5 -0.4,-25.8l0.1,-54.5c-19.7,-0 -39.4,0.2 -59,0.1 -3.5,-0 -9.6,-0.4 -12.1,-3.2a11,11 0,0 1,-2.8 -6.4c-1,-12.6 -0.1,-27.2 -0.1,-40v-81.1l-0,-102.9c0,-18.2 -0.8,-36.6 0.2,-54.7 1.7,-3 3.6,-4.8 6.5,-6.7 7.7,-0.8 15.8,-0.3 23.5,-0.3l44,0.1c-0,-9.4 -1.3,-61.4 1,-66.7 1.4,-3.1 4.1,-4.6 7,-5.9"
-      android:fillColor="#1A1A1A"/>
+      android:pathData="M0,54.55h46.8v72.5h-46.8z"
+      android:strokeWidth="0.209639"
+      android:fillColor="#008000"/>
   <path
-      android:pathData="M322.2,411.2c14.6,-0.3 29.4,-0.1 44,-0.1l80.2,0v172.3c0,25.3 0.7,50.8 -0,76.2a3.3,3.3 0,0 1,-0.5 2l-123.8,-0z"
-      android:fillColor="#40C384"/>
+      android:pathData="M21.22,35.11h4.92v19.95h-4.92z"
+      android:strokeWidth="0.209639"
+      android:fillColor="#008000"/>
+  <path
+      android:pathData="M21.22,124.81h4.92v19.95h-4.92z"
+      android:strokeWidth="0.209639"
+      android:fillColor="#008000"/>
 </vector>
