--- a/app/src/main/res/drawable/bullish_patterns.xml
+++ b/app/src/main/res/drawable/bullish_patterns.xml
@@ -1,39 +1,94 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="1024dp"
-    android:height="1024dp"
-    android:viewportWidth="1024"
-    android:viewportHeight="1024">
+    android:width="195.84dp"
+    android:height="163.78dp"
+    android:viewportWidth="195.84"
+    android:viewportHeight="163.78">
   <path
-      android:pathData="M0,0h1024v1024H0z"
-      android:fillColor="#FEFEFE"/>
+      android:pathData="M157.56,67.71h20v45h-20z"
+      android:strokeWidth="0.264583"
+      android:fillColor="#008000"/>
   <path
-      android:pathData="M888.6,125.6a10,10 0,0 1,4.1 0.3,7.7 7.7,0 0,1 4.8,4.3q0.9,2 0.7,4.3c-0.6,6.7 -2.1,13.4 -3.2,20l-6.3,37.5 -5.6,33.2c-1.4,8.2 -2.3,16.7 -5.2,24.5 -1.3,1.1 -2.6,2.2 -4.2,2.8a5.8,5.8 0,0 1,-4.8 -0.3c-2.4,-1.2 -4,-3.6 -5,-6 -2.5,-5.5 -3.5,-11.9 -5.2,-17.7l-9.7,-33.6 -0.8,0.9c-6.3,7 -13.7,13.4 -20.6,19.8a1450,1450 0,0 1,-50.2 44.6,2638 2638,0 0,1 -297.2,214.3l-24.9,15.5c-4.3,2.6 -8.7,5.7 -13.3,7.7 -2.3,1 -4.6,1.6 -7.1,1.6 -2.4,0 -5.5,-3.1 -7.2,-4.6 -6.2,-5.7 -12,-12 -17.9,-18l-32.6,-32.6L275.5,342.4c-30.5,27.4 -61.8,54.1 -92.8,80.9l-27.7,24.1c-5.2,4.5 -10.3,9.5 -15.9,13.4 -3.4,2.4 -6.1,2.2 -10.1,1.5 -1.6,-0.7 -3.2,-1.5 -4.6,-2.7a12,12 0,0 1,-3.8 -8.3c-0.1,-3.8 1.4,-6.3 3.9,-9 6.2,-6.8 14.2,-12.8 21.2,-18.8l41.6,-36.3 53.1,-46.8c9,-7.9 17.7,-16.6 27.2,-23.9 2.2,-1.7 5.2,-4 8.1,-4 2.6,0 5.1,1 7.1,2.7 6.2,5.2 11.8,11.8 17.5,17.6l33.5,33.8L438.4,471.8c10.6,-7.3 22,-13.8 32.8,-20.7a2836,2836 0,0 0,60 -38.8,2529 2529,0 0,0 225.7,-167q26.5,-22.2 51.6,-45.9c7.4,-7 15.5,-14.1 22.1,-21.9 -7.5,-1.6 -52.1,-7.6 -55,-9.4a8.4,8.4 0,0 1,-3.5 -5.3,8.2 8.2,0 0,1 4.7,-9c4.7,-1.8 10.3,-2.7 15.2,-3.9l27.7,-6.9 43.5,-11c8.4,-2.2 16.9,-4.7 25.5,-6.2m-35.1,147.9c2.7,0 6,0.3 8,2.5 1.4,1.4 1.9,3.1 2.2,5.1 0.8,4.8 0.4,10.1 0.4,14.9l-0.1,25.3c8.8,-0.1 25.6,-1.1 33.5,0.3 2.4,0.4 4.9,1.3 6.8,2.9 2.6,2.4 2.7,7.3 2.7,10.7 0.7,48.9 -0,97.9 0,146.9v60.3c0,10.5 0.4,21.2 -0.1,31.6 -0.1,2.4 -0.1,6.3 -1.8,8a13.3,13.3 0,0 1,-6.4 3.4c-7.1,1.7 -26.3,0.6 -34.6,0.5 -0,9.3 1.5,41.6 -0.8,48.4 -0.9,2.7 -3.5,4 -5.9,5.2l-0.9,0c-2.6,0.1 -5.4,-0.6 -7.3,-2.5a8.7,8.7 0,0 1,-2.2 -4.5c-1,-5.3 -0.5,-11.3 -0.5,-16.7l0.2,-29.8c-8.4,0.1 -35.4,2.1 -40.6,-3.2 -2.8,-2.8 -2.5,-9.6 -2.6,-13.3l0,-156v-53.1c0,-8.9 -0.5,-18.2 0.1,-27.1 0.2,-2.6 0.5,-7 2.5,-8.9 5.4,-4.9 32.1,-3.1 40.5,-3 -0.1,-8.1 -1.4,-37.6 0.9,-43 1.1,-2.6 3.4,-3.7 5.9,-4.8"
-      android:fillColor="#141314"/>
+      android:pathData="M165.06,55.54h5v14.46h-5z"
+      android:strokeWidth="0.264583"
+      android:fillColor="#008000"/>
   <path
-      android:pathData="M820,338h70.4l0,231.6 -70.5,-0z"
-      android:fillColor="#44C275"/>
+      android:pathData="M165.06,110h5v15.49h-5z"
+      android:strokeWidth="0.264583"
+      android:fillColor="#008000"/>
   <path
-      android:pathData="M267.5,474q0.6,-0.1 1.2,-0.1c2.8,-0.1 5.3,0.3 7.3,2.4 1.5,1.6 2.3,3.4 2.6,5.5 0.9,4.9 0.4,10.5 0.4,15.5l-0.1,25.7c8.1,-0.1 32.5,-1.8 38.5,2.1 1.8,1.2 2.5,2.4 2.9,4.5 1.6,8.3 0.7,17.9 0.7,26.4l-0,48.8v103c0,18.3 0.4,36.7 -0,55 -0.1,2.8 -0.2,6.2 -1.2,8.8 -0.2,0.5 -0.4,0.9 -0.8,1.4 -1.6,1.7 -4.5,2.6 -6.7,2.9 -4.3,0.7 -9,0.2 -13.3,0.2l-20,-0c0,8.3 1.3,43.4 -1.1,48.4 -1.2,2.5 -3.4,3.7 -5.9,4.6 -2.8,0.1 -5.8,-0.4 -7.9,-2.4 -1.3,-1.3 -1.9,-2.9 -2.2,-4.7 -1,-5.3 -0.5,-11.2 -0.5,-16.6l0.1,-29.3c-7.9,-0.1 -35.4,2 -40.6,-2.7 -2.6,-2.4 -2.6,-6.4 -2.6,-9.6 -0.5,-48.7 0,-97.5 0,-146.3l-0,-55c0,-9.7 -0.4,-19.6 0.1,-29.3 0.2,-2.5 0.2,-5.4 2.1,-7.3 1.7,-1.6 4.2,-2.3 6.4,-2.7 7.2,-1.3 25.7,-0.3 34,-0.2 0,-8.5 -1.3,-37.4 0.7,-43.5 0.9,-2.8 3.3,-4.2 5.7,-5.4"
-      android:fillColor="#141314"/>
+      android:pathData="M130.06,82.5h20v45h-20z"
+      android:strokeWidth="0.264583"
+      android:fillColor="#008000"/>
   <path
-      android:pathData="M234.9,540h69.2l0,219.9 -69.2,0c-0.6,-24.9 -0.1,-50 -0.1,-74.9z"
-      android:fillColor="#44C275"/>
+      android:pathData="M137.56,70.33h5v14.46h-5z"
+      android:strokeWidth="0.264583"
+      android:fillColor="#008000"/>
   <path
-      android:pathData="M701,368.1q1.5,-0.2 3,-0.2c2.5,0 4.8,0.7 6.5,2.6 1.6,1.7 2,3.7 2.3,5.9 0.8,6 0.3,12.6 0.3,18.7L713,432c8.5,-0 33,-1.8 38.9,2.2 2.1,1.4 2.4,3.3 2.8,5.7 1.4,8.3 0.5,17.9 0.5,26.4l-0,51.1 0,90.3c0,15.5 0.7,31.4 -0.1,46.9 -0.1,2.8 -0.4,7.5 -2.3,9.6 -1.6,1.7 -4.6,2.5 -6.8,2.8 -7.7,1.1 -24.4,0.2 -33.1,0.2l0.1,34.2c0,5.8 0.7,12.4 -0.5,18.1 -0.7,3.3 -2.8,4.8 -5.5,6.6q-0.9,0.1 -1.8,0.1c-2.5,0.1 -5.4,-0.3 -7.3,-2.1 -1.7,-1.7 -2.3,-3.9 -2.6,-6.2 -0.9,-5.6 -0.3,-11.9 -0.3,-17.6l0,-33.1c-7.9,-0.1 -34.3,2 -39.7,-3 -2.2,-2 -2.1,-6.4 -2.3,-9.2 -0.7,-11 -0.1,-22.5 -0.1,-33.5v-64.7l-0,-74.3c0,-12.9 -0.5,-26.1 0.2,-39 0.1,-2.7 0.1,-6 2.2,-8.1 1.8,-1.8 4.5,-2.7 6.9,-3.1 7.2,-1.2 24.6,-0.2 32.9,-0.2l-0.1,-36.8c-0,-6.6 -1,-14.9 0.6,-21.3 0.7,-2.8 3,-4.3 5.4,-5.8"
-      android:fillColor="#141314"/>
+      android:pathData="M137.56,124.79h5v15.49h-5z"
+      android:strokeWidth="0.264583"
+      android:fillColor="#008000"/>
   <path
-      android:pathData="M669.7,448.9H739l0,130.2 -0.1,51c-0,5.5 0.3,11 0.2,16.4 -0,1.4 0,2.8 -0.7,4l-1.3,0.2 -67.3,0.1c-0.7,-21.4 -0,-43 -0,-64.4z"
-      android:fillColor="#44C275"/>
+      android:pathData="M102.56,97.45h20v45h-20z"
+      android:strokeWidth="0.264583"
+      android:fillColor="#008000"/>
   <path
-      android:pathData="M407.7,535.6c2.6,0.2 5.2,0.7 7,2.6 1.4,1.5 1.8,3.7 2.1,5.6 0.8,5.7 0.2,11.8 0.2,17.5l-0.1,33.2c8.6,0.1 25.5,-1.2 33,0.4 2.2,0.5 4.5,1.4 6.1,3.1 2.1,2.2 1.9,7.8 1.9,10.7l-0,140.1 0,49.2c0,8.4 0.5,17.2 -0.2,25.5 -0.2,2.3 -0.6,4.6 -2.3,6.3 -4.9,4.5 -30.7,2.7 -38.5,2.7 0,8.3 1.1,52.5 -0.9,57.4 -1.2,2.8 -3.9,3.8 -6.6,4.8 -2.5,-0.2 -5.1,-0.7 -7,-2.5 -1.4,-1.3 -2,-3.1 -2.3,-4.9 -1,-6 -0.4,-12.8 -0.4,-19l0.1,-35.8c-8.5,0 -24.7,1 -32.5,-0.2 -2.3,-0.3 -4.8,-1.1 -6.6,-2.7 -2,-1.7 -2.2,-5.7 -2.3,-8.2 -0.7,-11.6 -0.1,-23.6 -0.1,-35.3l0,-68.8 -0,-73.2c-0,-12.9 -0.6,-26.2 0.1,-39.1 0.1,-2.6 0.2,-5.5 2.1,-7.5 1.6,-1.7 4.1,-2.4 6.3,-2.8 7.6,-1.3 24.5,-0.3 33,-0.2 -0,-8 -1.2,-51 1.3,-55.1 1.5,-2.5 3.8,-3.3 6.5,-3.9"
-      android:fillColor="#141314"/>
+      android:pathData="M110.06,85.28h5v14.46h-5z"
+      android:strokeWidth="0.264583"
+      android:fillColor="#008000"/>
   <path
-      android:pathData="M375,611h66.6V816c-22.2,-0.2 -44.4,0 -66.6,0z"
-      android:fillColor="#44C275"/>
+      android:pathData="M110.06,139.74h5v15.49h-5z"
+      android:strokeWidth="0.264583"
+      android:fillColor="#008000"/>
   <path
-      android:pathData="M549,472.1q1.2,-0.1 2.5,-0.1c2.5,-0.1 4.8,0.3 6.6,2.2 1.4,1.4 2,3 2.3,5 1,6.6 0.3,14 0.3,20.7l-0.1,39c8.3,0.1 34.8,-2.3 40.3,3.2 1.9,1.9 2.1,7.1 2.2,9.8 0.3,12.5 0,25.1 0,37.7v70.6l0,49.3c0,8.5 0.4,17.2 -0.1,25.6 -0.2,2.5 -0.4,6.5 -2.3,8.3 -2,1.8 -4.9,2.6 -7.5,3 -8.3,1.2 -23.5,0.2 -32.7,0.2 0.1,14.5 0.9,29.6 -0.2,44a15,15 0,0 1,-4.7 4.8c-1.2,0.4 -2.3,0.7 -3.5,0.7a8.3,8.3 0,0 1,-8.5 -6.5c-1,-4.6 -0.4,-10.4 -0.4,-15.1l0.1,-28c-8.1,0 -33.3,1.7 -38.7,-2.6 -1.9,-1.5 -2.2,-3.8 -2.5,-6.2 -1.1,-8.6 -0.4,-18.1 -0.4,-26.8l0,-51.7 0,-70.9c-0,-12.6 -0.8,-25.7 -0,-38.3 0.2,-2.6 0.6,-6.3 2.5,-8.3 4.6,-4.6 32,-2.8 39.1,-2.8l-0.1,-39.7c-0,-6.4 -1,-14.7 0.4,-20.8 0.7,-3 2.6,-4.5 5.2,-6.1"
-      android:fillColor="#141314"/>
+      android:pathData="M75.06,106h20v45h-20z"
+      android:strokeWidth="0.264583"
+      android:fillColor="#008000"/>
   <path
-      android:pathData="m517.8,555.2 l68.9,0.1 0,174.6c-3.6,1.1 -59.8,0.2 -68.9,0.2 -0.4,-24.2 -0.1,-48.5 -0.1,-72.7z"
-      android:fillColor="#44C275"/>
+      android:pathData="M82.56,93.83h5v14.46h-5z"
+      android:strokeWidth="0.264583"
+      android:fillColor="#008000"/>
+  <path
+      android:pathData="M82.56,148.29h5v15.49h-5z"
+      android:strokeWidth="0.264583"
+      android:fillColor="#008000"/>
+  <path
+      android:pathData="M45.06,92.5h20v45h-20z"
+      android:strokeWidth="0.264583"
+      android:fillColor="#008000"/>
+  <path
+      android:pathData="M52.56,80.33h5v14.46h-5z"
+      android:strokeWidth="0.264583"
+      android:fillColor="#008000"/>
+  <path
+      android:pathData="M52.56,134.79h5v15.49h-5z"
+      android:strokeWidth="0.264583"
+      android:fillColor="#008000"/>
+  <path
+      android:pathData="M15.06,74.95h20v45h-20z"
+      android:strokeWidth="0.264583"
+      android:fillColor="#008000"/>
+  <path
+      android:pathData="M22.56,62.78h5v14.46h-5z"
+      android:strokeWidth="0.264583"
+      android:fillColor="#008000"/>
+  <path
+      android:pathData="M22.56,117.24h5v15.49h-5z"
+      android:strokeWidth="0.264583"
+      android:fillColor="#008000"/>
+  <path
+      android:pathData="m0.06,60 l30,-18.08 45,38.08L185.06,15l-5,-5L75.06,73.78 30.06,35 0,55.54Z"
+      android:strokeWidth="0"
+      android:fillColor="#000000"/>
+  <path
+      android:pathData="M168.48,17.04 L170.06,0"
+      android:strokeWidth="0.264583"
+      android:fillColor="#000000"/>
+  <path
+      android:pathData="M180.06,2.32 L170.06,0"
+      android:strokeWidth="0.264583"
+      android:fillColor="#000000"/>
+  <path
+      android:pathData="m166.78,4.02 l17.5,24.37 11.55,-26.77z"
+      android:strokeWidth="0"
+      android:fillColor="#000000"/>
 </vector>
